Fixed overall spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,3 +47,4 @@ rect {
 }
 
 .top-buffer { margin-top:40px; }
+.top-buffer2 { margin-top:20px; }
